【UPDATE】base64编码方式修改为java8以上版本