@@ -9,8 +9,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
-import sun.misc.BASE64Encoder;
-
+import java.util.Base64;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -65,8 +64,7 @@ public class FfmpegController {
     private Result executePath(RequestParam param) {
         Result result = new Result();
         result.setSourcePath(param.getRtspSourcePath());
-        BASE64Encoder encoder = new BASE64Encoder();
-        String suffix = encoder.encode(param.getRtspSourcePath().getBytes());
+        String suffix = new String(Base64.getEncoder().encode(param.getRtspSourcePath().getBytes()));
         String rtmpPath = RequestParam.resolveRTMPPath(suffix, fFmpegService.getRtmpPrefix());
         //异步执行
         fFmpegService.execute(param, rtmpPath);
